--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
             <div class="headerText text-center">
               <h1>
                 <br /><br />
-                Fee Viewer
+                University Fee Calculator
               </h1>
             </div>
           </div>
@@ -26,7 +26,7 @@
             <div class="col-lg">
               <div class="form-group">
                 <label class="control-label offset-sm-3 col-sm-6" for="fees"
-                  >Choose fee type:</label
+                  >Select fee type:</label
                 >
                 <select
                   class="btn btn-info offset-sm-3 col-sm-6"
@@ -39,7 +39,7 @@
                   hidden
                   for="natinality"
                   id="nationality_label"
-                  >Choose nationality:</label
+                  >Select nationality:</label
                 >
                 <select
                   class="btn btn-info offset-sm-3 col-sm-6"
@@ -53,7 +53,7 @@
                   hidden
                   for="course"
                   id="course_label"
-                  >Choose course:</label
+                  >Select course:</label
                 >
                 <select
                   class="btn btn-info offset-sm-3 col-sm-6"
@@ -67,7 +67,7 @@
                   hidden
                   for="level"
                   id="level_label"
-                  >Choose level:</label
+                  >Select level:</label
                 >
                 <select
                   class="btn btn-info offset-sm-3 col-sm-6"
