--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
                   >Select fee type:</label
                 >
                 <select
-                  class="btn btn-info offset-sm-3 col-sm-6"
+                  class="btn btn-dark offset-sm-3 col-sm-6"
                   name="fees"
                   id="fees"
                 ></select>
@@ -42,7 +42,7 @@
                   >Select nationality:</label
                 >
                 <select
-                  class="btn btn-info offset-sm-3 col-sm-6"
+                  class="btn btn-dark offset-sm-3 col-sm-6"
                   hidden
                   name="nationality"
                   id="nationality"
@@ -56,7 +56,7 @@
                   >Select course:</label
                 >
                 <select
-                  class="btn btn-info offset-sm-3 col-sm-6"
+                  class="btn btn-dark offset-sm-3 col-sm-6"
                   hidden
                   name="course"
                   id="course"
@@ -70,7 +70,7 @@
                   >Select level:</label
                 >
                 <select
-                  class="btn btn-info offset-sm-3 col-sm-6"
+                  class="btn btn-dark offset-sm-3 col-sm-6"
                   hidden
                   name="level"
                   id="level"
@@ -84,27 +84,6 @@
         </div>
       </div>
     </div>
-    <!-- testin routes -->
-    <br/><br/>
-    <div hidden class="container">
-							
-      <div class='col-lg'>
-        <div class="form-group">
-          <label class="control-label">Enter fees name</label>
-          <input type='text' class="form-control" id = "fee_name" />
-        </div>
-      </div>
-      <div class='col-lg'>
-        <div class="form-group">
-          <label class="control-label">Enter fees amount</label>
-          <input type='text' class="form-control" id = "fee_amount" />
-        </div>
-      </div>
-    
-    <button id="submit-entry" class="btn btnD1 text-center" style="background-color:rgb(88, 210, 27)">Submit</button>
-  </div>
-  
-    <!-- end testing routes-->
   </body>
   <script src="index.js"></script>
 </html>
